--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -67,21 +67,21 @@
 
 .evanSOS
     height: 183px
-    width: 550px
+    width: 100%
     display: flex
     justify-content: flex-end
     margin: 30px
 
 .LadaSOS
     height: 183px
-    width: 550px
+    width: 100%
     display: flex
     justify-content: flex-start
     margin: 30px
 
 .AaronSOS
     height: 183px
-    width: 550px
+    width: 100%
     display: flex
     justify-content: flex-end
     margin: 30px
