--- a/figma/SOS/sass/sectionOne.sass
+++ b/figma/SOS/sass/sectionOne.sass
@@ -230,5 +230,5 @@
     src: url(../figma/SOS/webfonts/BebasNeue-Regular.ttf)
 
 @font-face
-    font-family: Bebas Neue
+    font-family: Open Sans
     src: url(../figma/SOS/webfonts/OpenSans.ttf)
