--- a/figma/SOS/sass/sectionFive-NEW.sass
+++ b/figma/SOS/sass/sectionFive-NEW.sass
@@ -230,15 +230,19 @@
 
     .reviewsSOS
         width: 290px
+        height: 220px
 
         &-name
-            width: 50%
+            width: 40%
 
         &-subname
             top: 70px
 
         &-text
             width: 90%
+
+        &-date
+            margin-top: 181px
 
 @media (max-width: 600px)
     .s5h1-main
