--- a/figma/SOS/sass/headerSOS.sass
+++ b/figma/SOS/sass/headerSOS.sass
@@ -171,6 +171,8 @@ body.lockSOS
         align-items: center
 
 @media (max-width: 1080px)
+    .language
+        display: none
 
     .header-container-SOS
         width: 100%
@@ -274,7 +276,7 @@ body.lockSOS
         width: 0
 
     .headerSOS-RIGHT-button
-        width: 200px
+        width: 100px
         height: 45px
         margin-top: 12px
         &-text
