--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -141,12 +141,12 @@
 
 @media (max-width: 390px)
     .footer-wrapper
-        margin-top: 120px
+        margin-top: 70px
 
-@media (max-width: 350px)
-    .footer-wrapper
-        margin-top: 140px
+// /** @media (max-width: 350px)
+//     .footer-wrapper
+//         margin-top: 100px
 
-@media (max-width: 330px)
-    .footer-wrapper
-        padding-top: 10px
+// @media (max-width: 330px)
+//     .footer-wrapper
+//         padding-top: 10px **/
