--- a/figma/Mediation/sass/Meditation-Global.sass
+++ b/figma/Mediation/sass/Meditation-Global.sass
@@ -6,6 +6,9 @@
     font-family: Heebo
     src: url(../figma/Mediation/font/Heebo.ttf)
 
+html
+    scroll-behavior: smooth
+
 .Meditation-color
     background-color: rgb(237, 251, 249)
 
