--- a/sass/style.sass
+++ b/sass/style.sass
@@ -50,6 +50,7 @@
 @import "../figma/Mediation/sass/gym"
 @import "../figma/Mediation/sass/footer"
 @import "../figma/Mediation/sass/header"
+@import "../figma/Mediation/sass/pageUp"
 
 @import "../figma/Plants/sass/header"
 
