--- a/css/style.css
+++ b/css/style.css
@@ -2969,6 +2969,20 @@ body.lockZEN {
     margin-top: 8px;
   }
 }
+#scrollTop-ZEN {
+  position: fixed;
+  bottom: 36px;
+  right: 36px;
+  font-size: 40px;
+  z-index: 20px;
+  color: #ff6781;
+  cursor: pointer;
+  border-radius: 50%;
+}
+#scrollTop-ZEN:hover {
+  box-shadow: 0px 0px 20px #ff6781;
+}
+
 .footer-up {
   display: flex;
   justify-content: space-between;
