--- a/sass/style.sass
+++ b/sass/style.sass
@@ -39,6 +39,8 @@
 @import "../figma/ZEN/sass/section8"
 @import "../figma/ZEN/sass/footer"
 @import "../figma/ZEN/sass/headerNew"
+@import "../figma/ZEN/sass/pageUp"
+
 @import "../figma/SOS/sass/footerSOS.sass"
 @import "../figma/SOS/sass/headerSOS"
 @import "../figma/Mediation/sass/Meditation-One"
