--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,6 +29,7 @@
 @import "../figma/SOS/sass/sectionFive-NEW"
 @import "../figma/SOS/sass/sectionTwo.sass"
 @import "../figma/SOS/sass/backgrounds"
+@import "../figma/SOS/sass/pageUp"
 
 @import "../figma/ZEN/sass/ZenGlobal"
 @import "../figma/ZEN/sass/section1"
