--- a/main/src/Components/education/education.css
+++ b/main/src/Components/education/education.css
@@ -19,7 +19,7 @@
 }
 
 .education-item:hover {
-  box-shadow: 0px 0px 80px #334bd4;
+  box-shadow: 0 0 80px #334bd4;
 }
 
 
@@ -37,9 +37,4 @@
   .education-item {
     height: auto;
   }
-
-/*   .education-item p {
-    padding: 0px 0;
-    margin: 0;
-  } */
 }
