--- a/main/src/Components/person/person.css
+++ b/main/src/Components/person/person.css
@@ -12,7 +12,7 @@
 }
 
 .person-item__img:hover {
-  box-shadow: 0px 0px 80px yellow;
+  box-shadow: 0 0 80px yellow;
 }
 
 .person-item__img img {
@@ -26,7 +26,7 @@
 .person-item__text {
   margin: auto 0;
   font-size: 64px;
-  font-family: Marck Script;
+  font-family: Marck Script, sans-serif;
   color: red;
   line-height: 70px;
   text-align: center;
@@ -34,7 +34,7 @@
 }
 
 .person-item__text:hover {
-  text-shadow: 0px 0px 4px yellow;
+  text-shadow: 0 0 4px yellow;
 }
 
 @media (max-width: 700px) {
