--- a/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
+++ b/app/Calc-on-iPhone-JS/sass/Calc-on-iPhone-JS.sass
@@ -3,6 +3,9 @@
     background: black
     color: white
     user-select: none
+    width: 470px
+    height: 700px
+    margin: 0 auto
 
 .status
     display: flex
