--- a/main/src/Components/works/nav/nav.css
+++ b/main/src/Components/works/nav/nav.css
@@ -29,3 +29,9 @@
     margin-bottom: 20px;
     padding-left: 0;
 }
+
+@media (max-width: 510px) {
+    .works-tabs {
+        padding: 0 20px;
+    }
+}
