--- a/main/src/Components/person/person.css
+++ b/main/src/Components/person/person.css
@@ -17,6 +17,8 @@
 
 .person-item__img img {
   transition: 1s;
+  height: 360px;
+  width: 360px;
 }
 
 .person-item__img img:hover{
@@ -40,5 +42,12 @@
 @media (max-width: 700px) {
   .person {
     padding: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .person-item__img img{
+    width: 100%;
+    height: 100%;
   }
 }
