--- a/server/src/pages/pages.css
+++ b/server/src/pages/pages.css
@@ -38,8 +38,8 @@
 }
 
 .Pagination-wrapper {
-    display: flex;
-    justify-content: center;
+    width: 77%;
+    margin: 0 auto;
 }
 
 @font-face {
