--- a/figma/Mediation/sass/Meditation-best.sass
+++ b/figma/Mediation/sass/Meditation-best.sass
@@ -45,7 +45,7 @@
                 box-shadow: 0px 0px 50px #268a79
 
             &-title
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 500
                 font-size: 32px
                 text-align: rigth
@@ -55,7 +55,7 @@
                 right: 35px
 
             &-text
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 400
                 font-size: 24px
                 line-height: 32px
