--- a/server/src/postForm/postForm.css
+++ b/server/src/postForm/postForm.css
@@ -19,6 +19,8 @@
 
 .form-item__title {
     font-size: 20px;
+    color:  white;
+    font-weight: 700;
 }
 
 .form-item {
@@ -34,8 +36,6 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-
-
 }
 
 @font-face {
