--- a/Andrusha/sass/education.sass
+++ b/Andrusha/sass/education.sass
@@ -20,7 +20,7 @@
         padding: 10px
 
         &:hover
-            box-shadow: 0px 0px 52px $vbr-color
+            box-shadow: 0 0 52px $vbr-color
 
         p
             margin: 0 auto
