--- a/figma/Mediation/sass/Meditation-Global.sass
+++ b/figma/Mediation/sass/Meditation-Global.sass
@@ -20,7 +20,7 @@ html
     font-weight: 400
     font-size: 54px
     text-align: center
-    font-family: Merienda One
+    font-family: Merienda One, serif
     line-height: 70px
     width: 710px
     color: black
@@ -30,7 +30,7 @@ html
 .Meditation-subtitle
     font-size: 24px
     font-weight: 400
-    font-family: Heebo
+    font-family: Heebo, serif
     line-height: 32px
     margin: 0 auto
     width: 1105px
