--- a/figma/Mediation/sass/footer.sass
+++ b/figma/Mediation/sass/footer.sass
@@ -41,7 +41,7 @@
         padding: 15px
         flex-wrap: wrap
         a
-            font-family: Heebo
+            font-family: Heebo, serif
             font-weight: 400
             font-size: 28px
             line-height: 42px
