--- a/figma/Mediation/sass/papers.sass
+++ b/figma/Mediation/sass/papers.sass
@@ -28,7 +28,7 @@
 
         &-title
             margin-top: 20px
-            font-family: Heebo
+            font-family: Heebo, serif
             font-weight: 500
             font-size: 34px
             text-align: center
@@ -39,7 +39,7 @@
             width: 324px
             height: 92px
             margin: 0 auto
-            font-family: Heebo
+            font-family: Heebo, serif
             font-weight: 400
             font-size: 18px
             line-height: 24px
