--- a/Andrusha/sass/catalog.sass
+++ b/Andrusha/sass/catalog.sass
@@ -8,7 +8,7 @@ $vbr-color: #334bd4
     font-weight: 700
     font-size: 34px
     color: white
-    font-family: Marck Script
+    font-family: Marck Script, serif
     margin-top: 20px
     text-shadow: -2px 0 $vbr-color, 0 2px $vbr-color, 2px 0 $vbr-color, 0 -2px $vbr-color
 
@@ -40,7 +40,7 @@ $vbr-color: #334bd4
         display: block !important
 
     a
-        margin-top: 0px
+        margin-top: 0
         color: #ffffff
 
         &:hover .button_layout-text
@@ -88,7 +88,6 @@ $vbr-color: #334bd4
     border-radius: 5px
     background-color: $vbr-color
     border: none
-    font-size: 12px
     font-weight: 500
     text-transform: uppercase
     text-align: center
@@ -225,7 +224,7 @@ $vbr-color: #334bd4
 
         &__content
             width: 50%
-            margin-right: 0px
+            margin-right: 0
             transform: translateX(-100%)
             transition: 0.5s all
 
@@ -251,7 +250,7 @@ $vbr-color: #334bd4
             list-style-type: none
             &_active
                 transform: translateX(-100%)
-                margin-left: 0px
+                margin-left: 0
 
             li
                 position: relative
