--- a/Andrusha/sass/person.sass
+++ b/Andrusha/sass/person.sass
@@ -10,20 +10,20 @@
 
         &__text
             font-size: 64px
-            font-family: Marck Script
+            font-family: Marck Script, serif
             color: red
             line-height: 70px
             text-align: center
 
             &:hover
-                text-shadow: 0px 0px 4px yellow
+                text-shadow: 0 0 4px yellow
 
     &-item__img
         overflow: hidden
         border-radius: 50%
 
         &:hover
-            box-shadow: 0px 0px 100px yellow
+            box-shadow: 0 0 100px yellow
         img
             border-radius: 50%
             transition: 1s
