--- a/figma/Mediation/sass/Meditation-One.sass
+++ b/figma/Mediation/sass/Meditation-One.sass
@@ -19,14 +19,14 @@
         font-size: 68px
         line-height: 88px
         text-align: center
-        font-family: Merienda One
+        font-family: Merienda One, serif
 
     &__under-text
         font-size: 24px
         font-weight: 400
         line-height: 31px
         text-align: center
-        font-family: Heebo
+        font-family: Heebo, serif
         max-width: 1109px
         max-height: 70px
         margin: 0 auto
@@ -41,7 +41,7 @@
         border-radius: 50px
         background: linear-gradient(#259385 100%, #159685 100%)
         color: white
-        font-family: Heebo
+        font-family: Heebo, serif
         font-weight: 700
         font-size: 25px
         text-align: center
