--- a/figma/Mediation/sass/Meditation-best.sass
+++ b/figma/Mediation/sass/Meditation-best.sass
@@ -85,10 +85,10 @@
 
             &:hover
                 transform: scale(1.05)
-                box-shadow: 0px 0px 50px #268a79
+                box-shadow: 0 0 50px #268a79
 
             &-title
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 500
                 font-size: 32px
                 text-align: rigth
@@ -98,7 +98,7 @@
                 left: 35px
 
             &-text
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 400
                 font-size: 24px
                 line-height: 32px
