--- a/figma/Mediation/sass/Meditation-item.sass
+++ b/figma/Mediation/sass/Meditation-item.sass
@@ -19,7 +19,7 @@
             &-title
                 padding-top: 50px
                 padding-left: 70px
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 500
                 font-size: 32px
                 text-align: left
@@ -29,7 +29,7 @@
             &-text
                 padding-top: 10px
                 padding-left: 70px
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 400
                 font-size: 24px
                 line-height: 31px
@@ -68,7 +68,7 @@
                 height: 100%
 
             &__wrapper
-                margin-top: 0px
+                margin-top: 0
 
             &__article
                 width: auto
