--- a/figma/Mediation/sass/Meditation-music.sass
+++ b/figma/Mediation/sass/Meditation-music.sass
@@ -22,11 +22,9 @@
 
             &-title
                 position: absolute
-                top: 35px
-                font-family: Heebo
+                font-family: Heebo, serif
                 font-weight: 500
                 font-size: 32px
-                line-height: 47px
                 color: rgba(0, 0, 0, 0.8)
                 text-align: center
                 top: 15px
@@ -60,11 +58,11 @@
                 line-height: 40px
                 font-size: 48px
                 padding: 20px
-                box-shadow: 0px 25px 30px rgba(179, 228, 221, 0.3), 0px 9px 24px rgba(26, 127, 114, 0.23)
+                box-shadow: 0 25px 30px rgba(179, 228, 221, 0.3), 0 9px 24px rgba(26, 127, 114, 0.23)
                 transition: 0.5s
 
                 &:hover
-                    box-shadow: 0px 0px 50px #268a79
+                    box-shadow: 0 0 50px #268a79
 
 @media (max-width: 1580px)
     .Meditation-music
