--- a/figma/Mediation/sass/gym.sass
+++ b/figma/Mediation/sass/gym.sass
@@ -8,14 +8,14 @@
 
         &__title
             margin-top: 191px
-            font-family: Heebo
+            font-family: Heebo, serif
             font-weight: 500
             font-size: 32px
             line-height: 58px
             color: rgba(0, 0, 0, 0.8)
 
         &__text
-            font-family: Heebo
+            font-family: Heebo, serif
             font-weight: 400
             font-size: 24px
             line-height: 31px
