--- a/figma/Mediation/sass/header.sass
+++ b/figma/Mediation/sass/header.sass
@@ -4,7 +4,7 @@
 
 .Meditation-header__container
     width: 80%
-    margin: 0px auto
+    margin: 0 auto
     display: flex
     align-items: center
     justify-content: space-between
@@ -18,9 +18,9 @@ body.lockMeditation
 
 .header-container
     max-width: 1200px
-    margin: 0px auto
+    margin: 0 auto
     display: flex
-    padding: 0px 30px
+    padding: 0 30px
     align-items: center
     justify-content: space-between
     min-height: 70px
@@ -35,7 +35,7 @@ body.lockMeditation
     z-index: 10
     li
         position: relative
-        margin: 0px 0px 0px 20px
+        margin: 0 0 0 20px
 
         a
             &:hover
@@ -48,7 +48,7 @@ body.lockMeditation
                 position: absolute
                 width: 100%
                 height: 10px
-                border-radius: 10px 10px 0px 0px
+                border-radius: 10px 10px 0 0
                 background-color: #1A7F72
                 transition: 0.5s
                 transform: scaleX(0)
@@ -61,7 +61,7 @@ body.lockMeditation
     font-size: 32px
     line-height: 57px
     font-weight: 500
-    font-family: Heebo
+    font-family: Heebo, serif
     padding: 38px 17px
     transition: 0.5s
 
@@ -160,7 +160,7 @@ body.lockMeditation
     .Meditation-header__list
         li
             flex-wrap: wrap
-            margin: 0px 0px 30px 0px
+            margin: 0 0 30px 0
             text-align: center
 
     .Meditation-header__list
