--- a/figma/SOS/sass/footerSOS.sass
+++ b/figma/SOS/sass/footerSOS.sass
@@ -52,7 +52,7 @@
     font-weight: 400
     font-size: 14px
     line-height: 19px
-    font-family: Open Sans
+    font-family: Open Sans, serif
     width: 320px
 
 .footer-wrapper
