--- a/figma/SOS/sass/headerSOS.sass
+++ b/figma/SOS/sass/headerSOS.sass
@@ -20,7 +20,7 @@ li
 
 .header-container-SOS
     width: 75%
-    margin: 0px auto
+    margin: 0 auto
     display: flex
     align-items: center
     justify-content: space-between
@@ -59,9 +59,9 @@ body.lockSOS
 
 .header-container
     max-width: 1200px
-    margin: 0px auto
+    margin: 0 auto
     display: flex
-    padding: 0px 30px
+    padding: 0 30px
     align-items: center
     justify-content: space-between
     min-height: 70px
@@ -76,14 +76,14 @@ body.lockSOS
     z-index: 10
     li
         position: relative
-        margin: 0px 0px 0px 20px
+        margin: 0 0 0 20px
 
         a
             color: #fff
             font-size: 18px
             text-transform: uppercase
             font-weight: 700
-            font-family: Open Sans
+            font-family: Open Sans, serif
             transition: 0.7s
 
             &:hover
@@ -257,7 +257,7 @@ body.lockSOS
     .menu-listSOS
         li
             flex-wrap: wrap
-            margin: 0px 0px 30px 0px
+            margin: 0 0 30px 0
             text-align: center
 
     .menu-listSOS
