--- a/figma/SOS/sass/pageUp.sass
+++ b/figma/SOS/sass/pageUp.sass
@@ -8,4 +8,4 @@
     cursor: pointer
     border-radius: 50%
     &:hover
-        box-shadow: 0px 0px 20px #d39013
+        box-shadow: 0 0 20px #d39013
