--- a/calc/src/App.css
+++ b/calc/src/App.css
@@ -15,6 +15,44 @@
   border-radius: 20px;
 }
 
+.status {
+  display: flex;
+  justify-content: start;
+  padding-left: 7px;
+}
+
+.signal {
+  margin-right: 1vh;
+  width: 20px;
+  height: 10px;
+}
+
+.wifi {
+  margin-left: 7px;
+  width: 20px;
+  height: 20px;
+}
+
+.battery {
+  height: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.battery-logo img {
+  width: 40px;
+  height: 53px;
+  padding-bottom: 30px;
+}
+
+.top-bar {
+  display: flex;
+  height: 90px;
+  width: 100%;
+  justify-content: space-between;
+  padding: 5px 0;
+}
+
 .screen {
   font-size: 50px;
   font-weight: 300;
@@ -47,9 +85,9 @@
   font-size: 44px;
   height: 80px;
   justify-content: center;
-  transition: filter .3s;
   width: 80px;
   color: white;
+  transition: 0.2s;
 }
 .btn:hover {
   background-color: gray;
